Update POMs and project structure.